starting bootstrap tests

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equivocatos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <img src="fotoaqui.png" alt="Logo do Blog Equivocatos"><h1>Equivocatos</h1><h2>Focados na Experiência</br>Viver é o que nos cativa</h2>
+    <header class="container row">
+        <img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Logo do Blog Equivocatos" class="col"><h1 class="col">Equivocatos</h1><h2 class="col text-end">Focados na Experiência</br>Viver é o que nos cativa</h2>
     </header>
     <div id="principal">
         <h3>Posts</h3>
@@ -18,7 +19,8 @@
         
     </div>
     <footer>
-        <img src="fotoaqui.png" alt="Logo Program dudes"><h7>Program dudes</h7><span><img src="fotoaqui.png" alt="Botão Home"></span>
+        <img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Logo Program dudes"><h7>Program dudes</h7><span><img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Botão Home"></span>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
