--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equivocatos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./my.css">
 </head>
 <body>
-    <header class="container row">
-        <img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Logo do Blog Equivocatos" class="col"><h1 class="col">Equivocatos</h1><h2 class="col text-end">Focados na Experiência</br>Viver é o que nos cativa</h2>
+    <header class="container h-100 d-flex m-0 p-0 justify-content-between">
+        <img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Logo do Blog Equivocatos" class="flex-gcol-1 align-self-start"/><h1 class="col-8 align-self-center">Equivocatos</h1><dic class="col-4 text-end"><h2 class="">Focados na Experiência</br>Viver é o que nos cativa</h2></div>
     </header>
     <div id="principal">
         <h3>Posts</h3>
