Logopd e Redes Sociais /index.html , /my.css

--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
         </div>
     </div>
     <div id="direita">
-        <img src="https://placehold.co/100x100/FFA500/FFA500.png" alt="Logo Program dudes" class="logopd">
+        <img src="./hux/logofacebook.png" width="50" height="50" alt="Logo Facebook" class="logoface">
+        <img src="./hux/logoinsta.png" width="50" height="50" alt="Logo Instagram" class="logoinsta">
+        <img src="./hux/logoyoutube.png" width="50" height="50" alt="Logo Youtube" class="logoyoutube">
+        <img src="./hux/logotwiter.avif" width="50" height="50" alt="Logo Twiter" class="logotwiter">
+        <img src="./hux/logopinterest.png" width="50" height="50" alt="Logo Pinterest" class="logopinterest">
+        <img src="./hux/logopd.jpeg" alt="Logo Program dudes" class="logopd">
         <p class="descgrp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis exercitationem sint nesciunt deleniti quod provident, nihil nemo quae quo earum sapiente tempora nobis vero qui ipsa id, magnam odit!</p>
-        <p>colcoar lgo das redes aqui</p>
+        
     </div>
     </div>
 </body>
