--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header">
-        <a href="./index.html"><div class="headtit"><img src="./post/hux/logo.png" alt="Logo do Blog Equivocatos" class="logo"/><h1><b>Equivocatos</b></h1></div></a><h2>Focados na <b>Experiência</b></br>Viver é o que nos <b>cativa</b></h2></div>
+        <a href="./"><div class="headtit"><img src="./post/hux/logo.png" alt="Logo do Blog Equivocatos" class="logo"/><h1><b>Equivocatos</b></h1></div></a><h2>Focados na <b>Experiência</b></br>Viver é o que nos <b>cativa</b></h2></div>
         </div>
         <div class="line1"></div>
     </header>
